@@ -16,20 +16,36 @@ sourceSets {
     main{
         java {
             srcDir 'src/main/java'
-            java.outputDir = file('bin/main')
+//            java.outputDir = file('bin/main')
         }
     }
     test{
         java{
             srcDir 'src/test/java'
-            java.outputDir = file('bin/test')
+//            java.outputDir = file('bin/test')
         }
     }
 }
 
 dependencies {
+    implementation "org.hibernate:hibernate-core:$hibernate_version"
+    cordaProvided "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
+    cordaProvided "javax.persistence:javax.persistence-api:2.2"
+    cordaProvided 'com.google.guava:guava:23.0'
+
     // Corda dependencies.
-    cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
+    cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
+    testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "$corda_core_release_group:corda-test-utils:$corda_core_release_version"
+    testImplementation "$corda_core_release_group:corda-core-test-utils:$corda_core_release_version"
+}
+
+test {
+    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+               '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
 }
