@@ -17,7 +17,7 @@ sourceSets {
     main {
         java {
             srcDir 'src/main/java'
-            java.outputDir = file('bin/main')
+//            java.outputDir = file('bin/main')
         }
         resources {
             srcDir rootProject.file("config/dev")
@@ -26,7 +26,7 @@ sourceSets {
     test {
         java {
             srcDir 'src/test/java'
-            java.outputDir = file('bin/main')
+//            java.outputDir = file('bin/main')
         }
         resources {
             srcDir rootProject.file("config/test")
@@ -47,20 +47,66 @@ configurations {
 }
 
 dependencies {
-    testCompile "junit:junit:$junit_version"
+    cordaProvided "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
+    cordaProvided group: 'com.google.guava', name: 'guava', version: '23.5-jre'
 
     // Corda dependencies.
-    cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
-    cordaCompile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+    cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
+    corda  "$corda_release_group:corda:$corda_release_version"
+    testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
 
+    testImplementation "junit:junit:$junit_version"
+    testRuntimeOnly "org.iq80.snappy:snappy:$snappy_version"
 
     // CorDapp dependencies.
     cordapp project(":contracts")
 }
 
+quasar {
+    excludePackages.addAll(
+            "antlr**",
+            "javax**",
+            "com.codahale**",
+            "com.fasterxml.**",
+            "com.github.benmanes.caffeine.**",
+            "com.google.**",
+            "com.lmax.**",
+            "com.zaxxer.**",
+            "net.bytebuddy**",
+            "io.github.classgraph**",
+            "io.netty*",
+            "liquibase**",
+            "net.i2p.crypto.**",
+            "nonapi.io.github.classgraph.**",
+            "org.apiguardian.**",
+            "org.bouncycastle**",
+            "org.codehaus.**",
+            "org.h2**",
+            "org.hibernate**",
+            "org.jboss.**",
+            "org.objenesis**",
+            "org.w3c.**",
+            "org.xml**",
+            "org.yaml**",
+            "kotlin**",
+            "rx**")
+}
+
 task integrationTest(type: Test, dependsOn: []) {
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
+    jvmArgs =  rootProject.ext.test_add_opens + test_add_opens_fx
+}
+
+test {
+    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+               '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
